--- a/Crearcuenta.html
+++ b/Crearcuenta.html
@@ -1,134 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>ESCOMMERCE</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fontslogin/font-awesome-4.7.0/css/font-awesome.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fontslogin/iconic/css/material-design-iconic-font.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="csslogin/util.css">
 	<link rel="stylesheet" type="text/css" href="csslogin/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 
-<!-- Google font -->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-		<!-- Google font -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
+		integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"
+		integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+		crossorigin="anonymous"></script>
 
-		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+	<!--===============================================================================================-->
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
-		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
-		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
-		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+	<!-- Slick -->
+	<link type="text/css" rel="stylesheet" href="css/slick.css" />
+	<link type="text/css" rel="stylesheet" href="css/slick-theme.css" />
 
-		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="css/font-awesome.min.css">
+	<!-- nouislider -->
+	<link type="text/css" rel="stylesheet" href="css/nouislider.min.css" />
 
-		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="./js/signup.js"></script>
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/loader.css" />
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="./js/signup.js"></script>
 </head>
+
 <body>
-	<header>
-		<!-- TOP HEADER -->
-		<div id="top-header">
-			<div class="container">
-				<ul class="header-links pull-left">
-					<li><a href="#"><i class="fa fa-phone"></i>555555555</a></li>
-					<li><a href="#"><i class="fa fa-envelope-o"></i> ayudaescommerce@gmail.com</a></li>
-					<!-- Header Modal -->
-					<li><a href="#escom" class="fa fa-map-marker" data-toggle="modal"> ESCOM</a></li>
-					<div class="modal fade" id="escom">
-							<div class="modal_dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button tyle="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-										<h4 class="modal-title">Confirmación											
-										</h4>
-									</div>
-									<!-- Header Body -->
-									<div class="modal-body">
-										<p>
-										
-										Dirección: ESCOM IPN, Unidad Profesional Adolfo López Mateos, 07320 Ciudad de México, CDMX
-									<br>	Horas: 
-									<br>martes	7:00–9:30
-									<br>miércoles	7:00–9:30
-									<br>jueves	7:00–9:30
-									<br>viernes	7:00–9:30
-									<br>sábado	Cerrado
-									<br>domingo	Cerrado
-									<br>lunes	7:00–9:30
-									<br>Estudiantes: 3,000​ (aproximadamente)</br>
-									<br>Director: Andrés Ortigoza Campos</br>
-									<br>Fundación: 13 de agosto de 1993</br>
-									<br>Decano: Ignacio Ríos de la Torre</br>
-									<br>Tipo: Pública</br>
-										</br>
-										</p>
-									</div>
-								</div>
-							</div>
-					</div>
-				</ul>
-				
+
+	<div id="loader" class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
+		<div class="modal-dialog modal-dialog-centered ">
+		  <div class="modal-content">
+			<div class="modal-header">
+			</div>
+
+			<h3 style="text-align: center;">Creando cuenta</h3>
+			<div class="modal-body">
+				<div class="modal-dialog  d-flex justify-content-center" role="document">
+					<div class="spinner-grow" style="width: 10rem; height: 10rem;" role="status">
+						<span class="sr-only">Loading...</span>
+					  </div>
+				</div>
+			</div>
+			<div class="modal-footer">
+			</div>
+		  </div>
+		</div>
+	  </div>
+
+
+	<!--<div class="modal fade bd-example-modal-lg" data-backdrop="static" data-keyboard="false" tabindex="-1">
+		<div class="modal-dialog modal-sm">
+			<div class="modal-content" style="width: 48px">
+				<span class="fa fa-spinner fa-spin fa-3x"></span>
+				<p>Creando cuenta</p>
 			</div>
 		</div>
-		<!-- /TOP HEADER -->
-	</header>
+	</div>-->
 	<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
+
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-				<span class="login100-form-title p-b-37">
+			<span class="login100-form-title p-b-37">
+				Crear cuenta
+			</span>
+
+			<div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa un nombre válido ">
+				<input id="name" class="input100" type="text" onkeypress="return /^[a-zA-Z ]+$/i.test(event.key)"
+					autocomplete="off" name="username" placeholder="Nombre">
+				<span class="focus-input100"></span>
+			</div>
+
+			<div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa tu apellido ">
+				<input id="lastName" class="input100" type="text" onkeypress="return /[a-z]/i.test(event.key)"
+					autocomplete="off" name="app" placeholder="Apellido Paterno">
+				<span class="focus-input100"></span>
+			</div>
+
+			<div class="wrap-input100 m-b-20">
+				<input id="secondLastName" class="input100" type="text" onkeypress="return /[a-z]/i.test(event.key)"
+					autocomplete="off" name="apm" placeholder="Apellido Materno (Opcional)">
+				<span class="focus-input100"></span>
+			</div>
+
+			<div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa un correo válido: ex@alumno.ipn.mx">
+				<input id="email" class="input100" type="email" autocomplete="off" name="email" placeholder="Correo">
+				<span class="focus-input100"></span>
+			</div>
+			<div class="wrap-input100 validate-input m-b-25" data-validate="Ingresa una contraseña válida">
+				<input id="password" class="input100" autocomplete="off" type="password" name="pass" minlength="8"
+					placeholder="Contraseña (8 caracteres mínimo)">
+				<span class="focus-input100"></span>
+			</div>
+
+			<div class="wrap-input100 validate-input m-b-25" data-validate="Ingresa una contraseña válida">
+				<input id="confirmPass" class="input100" autocomplete="off" type="password" name="pass" minlength="8"
+					placeholder="Inserte de nuevo la contraseña">
+				<span class="focus-input100"></span>
+			</div>
+
+			<div class="container-login100-form-btn">
+				<button id="button" class="login100-form-btn">
 					Crear cuenta
-				</span>
-
-				<div class="wrap-input100 validate-input m-b-20" data-validate = "Ingresa un nombre válido ">
-					<input id="name" class="input100" type="text" onkeypress="return /[a-z]/i.test(event.key)" autocomplete="off" name="username" placeholder="Nombre">
-					<span class="focus-input100"></span>
-				</div>
-
-				<div class="wrap-input100 validate-input m-b-20" data-validate = "Ingresa tu apellido ">
-					<input id="lastName" class="input100" type="text" onkeypress="return /[a-z]/i.test(event.key)" autocomplete="off" name="app" placeholder="Apellido Paterno">
-					<span class="focus-input100"></span>
-				</div>
-
-				<div class="wrap-input100 m-b-20">
-					<input id="secondLastName" class="input100" type="text" onkeypress="return /[a-z]/i.test(event.key)" autocomplete="off" name="apm" placeholder="Apellido Materno (Opcional)">
-					<span class="focus-input100"></span>
-				</div>
-
-				<div class="wrap-input100 validate-input m-b-20" data-validate = "Ingresa un correo válido: ex@alumno.ipn.mx">
-						<input id="email"class="input100" type="email" autocomplete="off" name="email" placeholder="Correo">
-						<span class="focus-input100"></span>
-					</div>
-
-				<div class="wrap-input100 validate-input m-b-25" data-validate = "Ingresa una contraseña válida">
-					<input id="password" class="input100" autocomplete="off" type="password" name="pass" minlength="8" placeholder="Contraseña (8 caracteres mínimo)">
-					<span class="focus-input100"></span>
-				</div>
+				</button>
+			</div>
 
 				<div class="wrap-input100 validate-input m-b-25" data-validate = "Ingresa una contraseña válida">
 					<input id="confirmPass" class="input100" autocomplete="off" type="password" name="pass" minlength="8" placeholder="Inserte de nuevo la contraseña">
@@ -191,26 +218,26 @@
 	
 		</div>
 	</div>
-	
-	
+
+
 
 	<div id="dropDownSelect1"></div>
-	
 
+	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="vendor/animsition/js/animsition.min.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="vendor/daterangepicker/moment.min.js"></script>
 	<script src="vendor/daterangepicker/daterangepicker.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="vendor/countdowntime/countdowntime.js"></script>
-
+	<!--===============================================================================================-->
 	<script src="jslogin/main.js"></script>
 	<!-- jQuery Plugins -->
 	<script src="js/jquery.min.js"></script>
@@ -221,4 +248,5 @@
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
