--- a/confirmEmail.html
+++ b/confirmEmail.html
@@ -59,24 +59,24 @@
     <div class="container-login100" style="background-image: url('img/escom1.jpeg');">
         <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
             <span class="login100-form-title p-b-37">
-                Verificar correo.
+                Verificar Correo
             </span>
 
-            
-                <div class="col-md-7">
-					<!-- Billing Details -->
-					<div class="token">
-						<div class="form-group">
-							<input class="input" id="name" type="text" name="Token" placeholder="Ingresa tu correo">
-						</div>
-                        <div class="form-group">
-							<input class="input" id="name" type="text" name="Token" placeholder="Ingresa tu token">
-						</div>
-					</div>
-				</div>
+            <div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa un correo válido: ex@alumno.ipn.mx">
+                <input id="email" class="input100" type="email" autocomplete="off" name="email" placeholder="Correo">
+                <span class="focus-input100"></span>
+            </div>
+
+            <div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa tu código. Ej 123456 ">
+                <input id="code" class="input100" type="text" maxlength="6"
+                    onkeypress="return /[0-9]/i.test(event.key)" autocomplete="off" name="app"
+                    placeholder="Código de verificación">
+                <span class="focus-input100"></span>
+            </div>
+
             <div class="container-login100-form-btn">
                 <button id="button" class="login100-form-btn">
-                    Confirmar Correo
+                    Verificar
                 </button>
             </div>
 
