--- a/tecnologia.html
+++ b/tecnologia.html
@@ -151,13 +151,8 @@
 						<div class="header-search">
 							<form>
 								<select class="input-select">
-									<option value="1">Categorias</option>
-									<option value="1">Comida</option>
-									<option value="1">Electrónica</option>
-									<option value="1">Tecnología</option>
-									<option value="1">Juegos de mesa</option>
-									<option value="1">Papelería</option>
-									<option value="1">Espiritu IPN</option>
+									<option value="1">Productos; </option>
+									
 								</select>
 								<input class="input" placeholder="Buscar">
 								<button class="search-btn">Buscar</button>
