--- a/juegos.html
+++ b/juegos.html
@@ -129,14 +129,8 @@
 							<div class="header-search">
 								<form>
 									<select class="input-select">
-										<option value="0">Categorias</option>
-										<option value="1">Comida</option>
-										<option value="1">Electrónica</option>
-										<option value="1">Tecnología</option>
-										<option value="1">Juegos de mesa</option>
-										<option value="1">Papelería</option>
-										<option value="1">Espiritu IPN</option>
-									</select>
+										<option value="0">Productos: </option>
+										</select>
 									<input class="input" placeholder="Buscar">
 									<button class="search-btn">Buscar</button>
 								</form>
