--- a/checkout.html
+++ b/checkout.html
@@ -508,77 +508,75 @@
 			<!-- /NEWSLETTER -->
 
 			<!-- FOOTER -->
-			<footer id="footer">
-				<!-- top footer -->
-				<div class="section">
-					<!-- container -->
-					<div class="container">
-						<!-- row -->
-						<div class="row">
-							<div class="col-md-3 col-xs-6">
-								<div class="footer">
-									<h3 class="footer-title">Sobre nosotros</h3>
-									<ul class="footer-links">
-										<li><a href="#"><i class="fa fa-map-marker"></i>ESCOM</a></li>
-
-										<li><a href="#"><i class="fa fa-phone"></i>5555555</a></li>
-										<li><a href="#"><i class="fa fa-envelope-o"></i>ayudaescommerce@gmail.com</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-md-3 col-xs-6">
-								<div class="footer">
-									<h3 class="footer-title">Producto:</h3>
-									<ul class="footer-links">
-										<li><a href="comida.html" href="#">Comida</a></li>
-										<li><a href="electronica.html" href="#">Electrónica</a></li>
-										<li><a href="tecnologia.html" href="#">Tecnología</a></li>
-										<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
-										<li><a href="papeleria.html" href="#">Papelería</a></li>
-										<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="clearfix visible-xs"></div>
-
-							<div class="col-md-3 col-xs-6">
-								<div class="footer">
-									<h3 class="footer-title">Conocenos</h3>
-									<ul class="footer-links">
-										<li><a href="#">Más nosotros</a></li>
-										<li><a href="#">Contacto</a></li>
-										<li><a href="#">Politicas</a></li>
-										<li><a href="#">Pedidos y devoluciones</a></li>
-										<li><a href="#">Terminos y condiciones</a></li>
-
-									</ul>
-								</div>
-							</div>
-							<div class="col-md-3 col-xs-6">
-								<div class="footer">
-									<h3 class="footer-title">Servicio</h3>
-									<ul class="footer-links">
-										<li><a href="#">Mi perfil</a></li>
-										<li><a href="#">Ver carrito</a></li>
-										<li><a href="#">Lista de deseos</a></li>
-										<li><a href="#">Rastrear pedido</a></li>
-										<li><a href="#">Ayuda </a></li>
-									</ul>
-								</div>
-							</div>
+	<footer id="footer">
+		<!-- top footer -->
+		<div class="section">
+			<!-- container -->
+			<div class="container">
+				<!-- row -->
+				<div class="row">
+					<div class="col-md-3 col-xs-6">
+						<div class="footer">
+							<h3 class="footer-title">Sobre nosotros</h3>
+							<ul class="footer-links">
+								<li><a href="#"><i class="fa fa-map-marker"></i>ESCOM</a></li>
+								<li><a href="#"><i class="fa fa-phone"></i>5555555</a></li>
+								<li><a href="#"><i class="fa fa-envelope-o"></i>ayudaescommerce@gmail.com</a></li>
+							</ul>
 						</div>
-						<!-- /row -->
 					</div>
-					<!-- /container -->
+
+					<div class="col-md-3 col-xs-6">
+						<div class="footer">
+							<h3 class="footer-title">Categorias</h3>
+							<ul class="footer-links">
+								<li><a href="comida.html" href="#">Comida</a></li>
+								<li><a href="electronica.html" href="#">Electrónica</a></li>
+								<li><a href="tecnologia.html" href="#">Tecnología</a></li>
+								<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
+								<li><a href="papeleria.html" href="#">Papelería</a></li>
+								<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="clearfix visible-xs"></div>
+
+					<div class="col-md-3 col-xs-6">
+						<div class="footer">
+							<h3 class="footer-title">Información</h3>
+							<ul class="footer-links">
+								<li><a href="#">Sobre nosotros</a></li>
+								<li><a href="#">Contacto</a></li>
+								<li><a href="#">Politicas</a></li>
+								<li><a href="#">Pedidos y devoluciones</a></li>
+								<li><a href="#">Terminós y condiciones</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-xs-6">
+						<div class="footer">
+							<h3 class="footer-title">Servicio</h3>
+							<ul class="footer-links">
+								<li><a href="#">Mi cuenta</a></li>
+								<li><a href="#">Ver carrito</a></li>
+								<li><a href="#">Lista de deseos</a></li>
+								<li><a href="#">Rastrear</a></li>
+								<li><a href="#">Ayuda</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
-				<!-- /top footer -->
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /top footer -->
 
+	</footer>
+	<!-- /FOOTER -->
 
-			</footer>
-			<!-- /FOOTER -->
 
 			<!-- jQuery Plugins -->
 			<script src="js/jquery.min.js"></script>
