--- a/tecnologia.html
+++ b/tecnologia.html
@@ -151,7 +151,7 @@
 						<div class="header-search">
 							<form>
 								<select class="input-select">
-									<option value="1">Productos; </option>
+									<option value="1">Productos: </option>
 									
 								</select>
 								<input class="input" placeholder="Buscar">
