--- a/Metododepag.html
+++ b/Metododepag.html
@@ -181,11 +181,11 @@
 									</div>
 								
 									<div class="cart-summary">
-										<small>3 Articulos</small>
-										<h5>SUBTOTAL: $1,340.00</h5>
+										<small>0 Articulos</small>
+										<h5>SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns">
-										<a href="#">Eliminar</a>
+										<a href= "Carrito.html" id="delete">Detalle</a>
 										<a href="checkout.html" href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
