--- a/papeleria.html
+++ b/papeleria.html
@@ -190,7 +190,7 @@
 										<h5>SUBTOTAL: $1,340.00</h5>
 									</div>
 									<div class="cart-btns">
-										<a href="#">Eliminar</a>
+										<a href= "Carrito.html" id="delete">Detalle</a>
 										<a href="checkout.html" href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
