--- a/producto.html
+++ b/producto.html
@@ -188,7 +188,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href="#" id="delete">Eliminar</a>
+										<a href= "Carrito.html" id="delete">Detalle</a>
 										<a id ="buy" href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
