--- a/juegos.html
+++ b/juegos.html
@@ -190,7 +190,7 @@
 										<h5>SUBTOTAL: $1,340.00</h5>
 									</div>
 									<div class="cart-btns">
-										<a href= "Carrito.html" id="delete">Detalle</a>
+										<a href= "Wishlist.html" id="delete">Detalle</a>
 										<a href="checkout.html" href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
@@ -234,7 +234,7 @@
 											<h5>SUBTOTAL: $2940.00</h5>
 										</div>
 										<div class="cart-btns">
-											<a href="#">Ver carrito</a>
+											<a href= "Carrito.html" id="delete">Detalle</a>
 											<a href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 										</div>
 									</div>
