--- a/search.html
+++ b/search.html
@@ -6,10 +6,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="0" />
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>ADOO</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -32,9 +31,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./js/index.js"></script>
 	<script src="./js/cart.js"></script>
-	<script src="./js/index-products.js"></script>
-	<script src="./js/index-categories.js"></script>
-	<script src="./js/index-search.js"></script>
+	<script src="./js/searchbar.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,6 +70,7 @@
 										México, CDMX
 										<br> Horas:
 										<br>martes 7:00–9:30
+										<br>miércoles 7:00–9:30
 										<br>jueves 7:00–9:30
 										<br>viernes 7:00–9:30
 										<br>sábado Cerrado
@@ -92,8 +90,8 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<!--<li><a href="productregister.html"><i class="fa fa-dollar"></i>Agregar producto</a></li>
-						<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
-												<!-- Header Modal -->
+								<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
+														<!-- Header Modal -->
 					<li><a href="#deseos" class="fa fa-user-o" data-toggle="modal" id="profile"> Mi perfil</a></li>
 					<div class="modal fade" id="deseos">
 						<div class="modal_dialog">
@@ -151,10 +149,15 @@
 					<!-- SEARCH BAR -->
 					<div class="col-md-6">
 						<div class="header-search">
-							<form id="form">
+							<form>
 								<select class="input-select">
-									<option value="0">Productos: </option>
-									
+									<option value="1">Categorias</option>
+									<option value="1">Comida</option>
+									<option value="1">Electrónica</option>
+									<option value="1">Tecnología</option>
+									<option value="1">Juegos de mesa</option>
+									<option value="1">Papelería</option>
+									<option value="1">Espiritu IPN</option>
 								</select>
 								<input class="input" placeholder="Buscar" id="search_string">
 								<button class="search-btn" id="search-btn">Buscar</button>
@@ -193,7 +196,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href= "Carrito.html" id="delete">Detalle</a>
+										<a href="#" id="delete">Eliminar</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
@@ -221,26 +224,19 @@
 	</header>
 	<!-- /HEADER -->
 
-	<!-- NAVIGATION -->
-	<nav id="navigation">
+	<!-- BREADCRUMB -->
+	<div id="breadcrumb" class="section">
 		<!-- container -->
 		<div class="container">
-			<!-- responsive-nav -->
-			<div id="responsive-nav">
-				<!-- NAV -->
-				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="index.html">Inicio</a></li>
-					<li><a id="e">Electrónica</a></li>
-					<li><a id="t">Tecnología</a></li>
-					<li><a id="i">Espiritu IPN</a></li>
-				</ul>
-				<!-- /NAV -->
+			<!-- row -->
+			<div class="row">
+				<h3 class="title" id="title_products">Resultados de la búsqueda</h3>
 			</div>
-			<!-- /responsive-nav -->
+			<!-- /row -->
 		</div>
 		<!-- /container -->
-	</nav>
-	<!-- /NAVIGATION -->
+	</div>
+	<!-- /BREADCRUMB -->
 
 	<!-- SECTION -->
 	<div class="section">
@@ -248,258 +244,126 @@
 		<div class="container">
 			<!-- row -->
 			<div class="row">
-				<!-- shop -->
-				<div class="col-md-4 col-xs-6">
-					<div class="shop"  id="tecnologia">
-						<div class="shop-img">
-							<img src="./img/mateb.jpg" alt="">
-						</div>
-						<div class="shop-body">
-							<h3>Tecnología</h3>
-							<a class="cta-btn">Comprar ahora <i
-									class="fa fa-arrow-circle-right"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /shop -->
+				<!-- ASIDE -->
+				<div id="aside" class="col-md-3">
 
-				<!-- shop -->
-				<div class="col-md-4 col-xs-6" >
-					<div class="shop" id="electronica">
-						<div class="shop-img">
-							<img src="./img/electronic.jpg" alt="">
-						</div>
-						<div class="shop-body">
-							<h3>Electrónica<br></h3>
-							<a class="cta-btn" >Comprar ahora <i
-									class="fa fa-arrow-circle-right"></i></a>
+					<!-- aside Widget -->
+					<div class="aside">
+						<h3 class="aside-title">Precios</h3>
+						<div class="price-filter">
+							<div id="price-slider"></div>
+							<div class="input-number price-min">
+								<input id="price-min" type="number">
+								<span class="qty-up">+</span>
+								<span class="qty-down">-</span>
+							</div>
+							<span>-</span>
+							<div class="input-number price-max">
+								<input id="price-max" type="number">
+								<span class="qty-up">+</span>
+								<span class="qty-down">-</span>
+							</div>
 						</div>
 					</div>
-				</div>
-				<!-- /shop -->
+					<!-- /aside Widget -->
+					<!-- /aside Widget -->
 
-				<!-- shop -->
-				<div class="col-md-4 col-xs-6" >
-					<div class="shop" id="ipn">
-						<div class="shop-img">
-							<img src="./img/ipnp.jpg" alt="">
+					<!-- aside Widget -->
+					<div class="aside">
+						<h3 class="aside-title">Más vendido</h3>
+						<div class="product-widget">
+							<div class="product-img">
+								<img src="./img/circuitos1.jpg" alt="">
+							</div>
+							<div class="product-body">
+								<p class="product-category">Circuitos integrados/p>
+								<h3 class="product-name"><a href="#">DIL-14</a></h3>
+								<h4 class="product-price">$12.00</h4>
+							</div>
 						</div>
-						<div class="shop-body">
-							<h3>Espiritu IPN<br></h3>
-							<a href="IPN.html" href="#" class="cta-btn" >Comprar ahora<i
-									class="fa fa-arrow-circle-right"></i></a>
+
+						<div class="product-widget">
+							<div class="product-img">
+								<img src="./img/circuitos2.jpg" alt="">
+							</div>
+							<div class="product-body">
+								<p class="product-category">Componentes</p>
+								<h3 class="product-name"><a href="#">Transistores</a></h3>
+								<h4 class="product-price">$30.00</h4>
+							</div>
+						</div>
+
+						<div class="product-widget">
+							<div class="product-img">
+								<img src="./img/componentes2.jpg" alt="">
+							</div>
+							<div class="product-body">
+								<p class="product-category">Paquetes</p>
+								<h3 class="product-name"><a href="#">Kit Básico</a></h3>
+								<h4 class="product-price">$120.00</h4>
+							</div>
 						</div>
 					</div>
+					<!-- /aside Widget -->
 				</div>
-				<!-- /shop -->
+				<!-- /ASIDE -->
+
+				<!-- STORE -->
+				<div id="store" class="col-md-9">
+					<!-- store top filter -->
+					<div class="store-filter clearfix">
+						<div class="store-sort">
+							<label>
+								Ordenar por:
+								<select class="input-select">
+									<option value="0">Popular</option>
+									<option value="1">Precio</option>
+								</select>
+							</label>
+
+							<label>
+								Mostrar:
+								<select class="input-select">
+									<option value="0">10</option>
+									<option value="1">15</option>
+								</select>
+							</label>
+						</div>
+						<ul class="store-grid">
+							<li class="active"><i class="fa fa-th"></i></li>
+							<li><a href="#"><i class="fa fa-th-list"></i></a></li>
+						</ul>
+					</div>
+					<!-- /store top filter -->
+
+					<!-- store products -->
+					<div class="row" id="product-container">
+						<!-- product -->
+
+						<!-- /store bottom filter -->
+					</div>
+					<!-- /store products -->
+
+					<!-- store bottom filter -->
+					<div class="store-filter clearfix">
+
+						<ul class="store-pagination">
+							<li class="active">1</li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
+						</ul>
+					</div>
+					<!-- /store bottom filter -->
+				</div>
+				<!-- /STORE -->
 			</div>
 			<!-- /row -->
 		</div>
 		<!-- /container -->
 	</div>
 	<!-- /SECTION -->
-
-	<!-- SECTION -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-
-				<!-- section title -->
-				<div class="col-md-12">
-					<div class="section-title">
-						<h3 class="title" id="title_products">Nuevos productos</h3>
-						<div class="section-nav" id="categories">
-							<ul class="section-tab-nav tab-nav">
-								<li><a href="comida.html" href="#">Comida</a></li>
-								<li><a href="electronica.html" href="#">Electrónica</a></li>
-								<li><a href="tecnologia.html" href="#">Tecnología</a></li>
-								<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
-								<li><a href="papeleria.html" href="#">Papelería</a></li>
-								<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- /section title -->
-
-				<!-- Products tab & slick -->
-				<div class="col-md-12">
-					<div class="row">
-						<div class="products-tabs">
-							<!-- tab -->
-							<div id="tab1" class="tab-pane active">
-								<div class="products-slick" id="product_container" data-nav="#slick-nav-1">
-
-								</div>
-								<div id="slick-nav-1" class="products-slick-nav"></div>
-							</div>
-							<!-- /tab -->
-						</div>
-					</div>
-				</div>
-				<!-- Products tab & slick -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /SECTION -->
-
-	<!-- SECTION -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-
-				<!-- section title -->
-				<div class="col-md-12">
-					<div class="section-title">
-						<h3 class="title">Populares</h3>
-
-					</div>
-				</div>
-				<!-- /section title -->
-
-				<!-- Products tab & slick -->
-				<div class="col-md-12">
-					<div class="row">
-						<div class="products-tabs">
-							<!-- tab -->
-							<div id="tab2" class="tab-pane fade in active">
-								<div class="products-slick" data-nav="#slick-nav-2" id="product_container_2">
-
-									<!-- /product -->
-								</div>
-								<div id="slick-nav-2" class="products-slick-nav"></div>
-							</div>
-							<!-- /tab -->
-						</div>
-					</div>
-				</div>
-				<!-- /Products tab & slick -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /SECTION -->
-
-	<!-- SECTION -->
-	<div class="section" style="display: none;">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<div class="col-md-4 col-xs-6">
-					<div class="section-title">
-						<h4 class="title">Recientemente vendido</h4>
-						<div class="section-nav">
-							<div id="slick-nav-3" class="products-slick-nav"></div>
-						</div>
-					</div>
-
-					<div class="products-widget-slick" data-nav="#slick-nav-3">
-						<div>
-							<!-- product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/monopolyzelda.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">Monopoly Zelda</a></h3>
-									<h4 class="product-price">$980.00 </h4>
-								</div>
-							</div>
-							<!-- /product widget -->
-
-							<!-- product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/unoclasico.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">Uno clásico</a></h3>
-									<h4 class="product-price">$80.00</h4>
-								</div>
-							</div>
-							<!-- /product widget -->
-
-							<!-- product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/unohp.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">Uno Harry Potter</a></h3>
-									<h4 class="product-price">$180.00</h4>
-								</div>
-							</div>
-							<!-- product widget -->
-						</div>
-
-						<div>
-							<!-- product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/voting.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">The voting</a></h3>
-									<h4 class="product-price">$240.00</h4>
-								</div>
-							</div>
-							<!-- /product widget -->
-
-							<!-- product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/ajedrezrm.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">Ajedrez Rick and Morty</a></h3>
-									<h4 class="product-price">$1180.00</h4>
-								</div>
-							</div>
-							<!-- /product widget -->
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/calabozosydragones.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Juegos de mesa</p>
-									<h3 class="product-name"><a href="#">Calabozos y Dragones</a></h3>
-									<h4 class="product-price">$760.00</h4>
-								</div>
-							</div>
-							<!-- product widget -->
-
-
-						</div>
-						<!-- product widget -->
-
-
-					</div>
-
-				</div>
-			</div>
-
-
-
-
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /SECTION -->
-
 
 	<!-- FOOTER -->
 	<footer id="footer">
@@ -524,12 +388,11 @@
 						<div class="footer">
 							<h3 class="footer-title">Categorias</h3>
 							<ul class="footer-links">
-								<li><a href="comida.html" href="#">Comida</a></li>
-								<li><a href="electronica.html" href="#">Electrónica</a></li>
-								<li><a href="tecnologia.html" href="#">Tecnología</a></li>
-								<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
-								<li><a href="papeleria.html" href="#">Papelería</a></li>
-								<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
+								<li><a href="#">Ofertas</a></li>
+								<li><a href="#">Electrónica</a></li>
+								<li><a href="#">Tecnología</a></li>
+								<li><a href="#">Comida</a></li>
+								<li><a href="#">Espiritu IPN</a></li>
 							</ul>
 						</div>
 					</div>
@@ -571,6 +434,7 @@
 	</footer>
 	<!-- /FOOTER -->
 
+	<!-- jQuery Plugins -->
 	<!-- jQuery Plugins -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
