--- a/search.html
+++ b/search.html
@@ -151,13 +151,8 @@
 						<div class="header-search">
 							<form>
 								<select class="input-select">
-									<option value="1">Categorias</option>
-									<option value="1">Comida</option>
-									<option value="1">Electrónica</option>
-									<option value="1">Tecnología</option>
-									<option value="1">Juegos de mesa</option>
-									<option value="1">Papelería</option>
-									<option value="1">Espiritu IPN</option>
+									<option value="1">Producto: </option>
+									
 								</select>
 								<input class="input" placeholder="Buscar" id="search_string">
 								<button class="search-btn" id="search-btn">Buscar</button>
@@ -196,7 +191,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href="#" id="delete">Eliminar</a>
+										<a href="Carrito.html" id="delete">Eliminar</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
