--- a/search.html
+++ b/search.html
@@ -191,7 +191,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href="Carrito.html" id="delete">Eliminar</a>
+										<a href="Carrito.html" id="delete">Detalle</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
