--- a/confirmEmail.html
+++ b/confirmEmail.html
@@ -68,9 +68,8 @@
             </div>
 
             <div class="wrap-input100 validate-input m-b-20" data-validate="Ingresa tu código. Ej 123456 ">
-                <input id="code" class="input100" type="text" maxlength="6"
-                    onkeypress="return /[0-9]/i.test(event.key)" autocomplete="off" name="app"
-                    placeholder="Código de verificación">
+                <input id="code" class="input100" type="text" maxlength="6" onkeypress="return /[0-9]/i.test(event.key)"
+                    autocomplete="off" name="app" placeholder="Código de verificación">
                 <span class="focus-input100"></span>
             </div>
 
