--- a/producto.html
+++ b/producto.html
@@ -149,7 +149,7 @@
 							<form>
 								<select class="input-select">
 									<option value="1">Productos: </option>
-									
+
 								</select>
 								<input class="input" placeholder="Buscar">
 								<button class="search-btn">Buscar</button>
@@ -166,7 +166,7 @@
 								<a href="#">
 									<i class="fa fa-heart-o"></i>
 									<span>Deseos</span>
-									<div class="qty">2</div>
+									<div class="qty">0</div>
 								</a>
 							</div>
 							<!-- /Wishlist -->
@@ -188,9 +188,8 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href= "Carrito.html" id="delete">Detalle</a>
-										<a id ="buy" href="#">Comprar<i
-												class="fa fa-arrow-circle-right"></i></a>
+										<a href="Carrito.html">Detalle</a>
+										<a id="buy" href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -381,9 +380,9 @@
 										<div class="modal-body">
 											<p>
 												<br>
-												<p id="copy">Se ha agregado correctamente. Gracias por ser cool y
-													hacerte notar.</p>
-												</br>
+											<p id="copy">Se ha agregado correctamente. Gracias por ser cool y
+												hacerte notar.</p>
+											</br>
 											</p>
 										</div>
 									</div>
