--- a/search.html
+++ b/search.html
@@ -191,7 +191,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href="Carrito.html" id="delete">Detalle</a>
+										<a href= "Carrito.html" >Detalle</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
@@ -333,24 +333,7 @@
 
 					<!-- store products -->
 					<div class="row" id="product-container">
-						<!-- product -->
-
-						<!-- /store bottom filter -->
 					</div>
-					<!-- /store products -->
-
-					<!-- store bottom filter -->
-					<div class="store-filter clearfix">
-
-						<ul class="store-pagination">
-							<li class="active">1</li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-						</ul>
-					</div>
-					<!-- /store bottom filter -->
 				</div>
 				<!-- /STORE -->
 			</div>
