--- a/tecnologia.html
+++ b/tecnologia.html
@@ -152,7 +152,7 @@
 							<form>
 								<select class="input-select">
 									<option value="1">Productos: </option>
-									
+
 								</select>
 								<input class="input" placeholder="Buscar">
 								<button class="search-btn">Buscar</button>
@@ -191,7 +191,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href= "Carrito.html" id="delete">Detalle</a>
+										<a href="Carrito.html">Detalle</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
